Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.5.0-Beta 1
  FEATURES:
    * Music store based on the Amazon catalogue
    * Podcast subscription synchronisation and podcast status synchronisation
      with Gpodder service.
    * Possibility to browse through podcasts suggested by gpodder.net and
      through gpodder.net top recommended podcasts.
    * Made possible to make presets for TagGuesser. (BR 264632)
    * Display current timestamp in tray tooltip. (BR 278445)
    * Auto-save the playlist so that it is not lost if Amarok crashes.

  CHANGES:
    * BPM is now read from/saved to media devices (e.g. iPod).
    * Track last played date and time is now correctly read from/saved to iPods.
    * Depend on KDE 4.6 - various bugs were caused by older versions.
    * Total rewrite of Automated Playlist Generator algorithm.  New algorithm
      is far less complicated and crash-prone, but at the cost of taking
      longer to converge when the constraint tree is complicated. (BR 240927,
      BR 240301)
    * Added local podcasts are automatically subscribed in gpodder.net.
    * Removed local podcasts are automatically unsubscribed from gpodder.net.
    * GPodder Service automatically subscribes all local podcasts into
      gpodder.net when the login is successfull.
    * Improved the playlist synchronisation feature.
    * Make possible to get count tracks before the XSPF file is fully loaded.
    * Mark unplayble tracks in the playlist. Patch by Sandeep Raghuraman. (BR 263640)
    * Current track applet: show number of artists instead of genres. (BR 261077)


  BUGFIXES:
    * iPhone 3G (and perhaps later models) should be correctly recognized by
      Amarok now. (BR 281738)
    * Automated Playlist Generator doesn't freeze anymore when it finishes.
      (BR 277865)
    * Use regular MusicBrainz search for tracks with MBID. (BR 280857)
    * Always use English AND/OR in Collection Filter even if translations are