@@ -4,6 +4,8 @@ Amarok ChangeLog
 
 Version 2.5.0-Beta 1
   FEATURES:
+    * Ctrl+F now activates collection browser and focuses the seach collection
+      bar. (BR 257381)
     * Music store based on the Amazon catalogue
     * Podcast subscription synchronisation and podcast status synchronisation
       with Gpodder service.
